made slider workable, fix gaps, add hover effect and another broblems

--- a/src/styles/blocks/expertise.scss
+++ b/src/styles/blocks/expertise.scss
@@ -57,6 +57,15 @@
 .card {
   &__image {
     margin-bottom: 32px;
+
+    img {
+      transition: transform 0.3s;
+    }
+
+    img:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s;
+    }
   }
 
   &__title {
