--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -18,6 +18,10 @@
   min-height: 100vh;
   border-radius: 0 0 30px 30px;
 
+  @include on-desctop {
+    min-height: 800px;
+  }
+
   &__text-block {
     @include on-desctop {
       max-width: 362px;
@@ -155,47 +159,6 @@
       margin-bottom: 130px;
     }
   }
-
-  &__slider-block {
-    background-image: url(../images/blocks/header/bg-image.jpg);
-    background-repeat: no-repeat;
-    background-position: 50%;
-    background-size: cover;
-    height: 390px;
-    border-radius: 30px;
-    bottom: 0;
-    right: 0;
-    width: calc(100% + 40px);
-    margin: 0 -20px;
-
-    @include on-tablet {
-      width: calc(100% + 80px);
-      margin: 0 -40px;
-    }
-
-    @include on-desctop {
-      border-radius: 30px 0 0;
-      position: absolute;
-      width: 50%;
-      margin: 0;
-      right: 0;
-      height: calc(100vh - 120px);
-      overflow: hidden;
-    }
-  }
-
-  &__bg-inner {
-    padding-inline: 20px;
-    padding-bottom: 24px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    @include on-tablet {
-      padding-inline: 41px;
-      padding-bottom: 32px;
-    }
-  }
 }
 
 .icon {
@@ -236,39 +199,4 @@
       border: 1px solid $bg-btn;
     }
   }
-}
-
-.bg-inner {
-  &__arrows {
-    display: flex;
-    gap: 16px;
-    margin-bottom: 16px;
-  }
-
-  &__title {
-    font-size: 13px;
-    font-weight: 700;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-  }
-
-  &__subtitle {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    line-height: 1.4;
-  }
-}
-
-.arrow {
-  width: 32px;
-  height: 32px;
-  display: block;
-}
-
-.arrows--left {
-  background-image: url(../images/icons/arrow-left.svg);
-}
-
-.arrows--right {
-  background-image: url(../images/icons/arrow-right.svg);
 }
