--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,6 +9,21 @@
   }
 }
 
+.icon {
+  width: 24px;
+  height: 24px;
+  display: block;
+  background-position: 50%;
+
+  &__close-menu {
+    background-image: url(../images/icons/close-menu.svg);
+  }
+  
+  @include on-desctop {
+    display: none;
+  }
+}
+
 .menu {
   opacity: 0;
   transform: translateX(-100%);
@@ -23,22 +38,17 @@
   }
 
   &__top-bar {
-    padding: 20px 0;
     margin-bottom: 100px;
-  }
-
-  &__navigation {
-    align-items: center;
   }
 }
 
-.icon {
-  &__close-menu {
-    background-image: url(../images/icons/close-menu.svg);
+.top-bar {
+  padding: 20px 0;
 
-    @include on-desctop {
-      display: none;
-    }
+  &__left {
+    display: flex;
+    gap: 32px;
+    align-items: center;
   }
 }
 
