--- a/src/styles/blocks/results.scss
+++ b/src/styles/blocks/results.scss
@@ -14,7 +14,7 @@
   &__bg {
     @include on-tablet {
       background-image: url(../images/blocks/results/bg-image.png);
-      background-size: cover;
+      background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
       padding: 137px 0 32px;
