--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -43,7 +43,7 @@
 
     @include on-desctop {
       display: flex;
-      column-gap: 20px;
+      column-gap: 30px;
     }
   }
 
