--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './utils/vars';
 @import './utils/mixins';
 @import './blocks/header';
+@import './blocks/swiper';
 @import './blocks/menu';
 @import './blocks/about-us';
 @import './blocks/expertise';
@@ -27,4 +28,14 @@ body {
 
 .page {
   scroll-behavior: smooth;
+}
+
+.test1 {
+  width: 800px;
+  height: 400px;
+  border-radius: 1px solid red;
+}
+
+.test {
+  border-radius: 1px solid red;
 }
